# bioimage-mcp

./: .gitattributes  .gitignore  08-UAT.md  16-UAT.md  19-UAT.md  20-UAT.md  AGENTS.md  GEMINI.md  LICENSE  README.md  introspection_engine.md  pyproject.toml  pytest.ini  repro_search.py  repro_search_v2.py  ruff.toml  specs_patch.diff  test_perm.ome.tiff  verify_phase_23.py
.bioimage-mcp/: config.yaml
.github/workflows/: ci-pr.yml  smoke-extended.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v0.2.0-MILESTONE-AUDIT.md  v0.4.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: ast-inspection-missing-mods.md  cellpose-list-missing-module-io.md  cli-list-missing-fields.md  cli-list-tool-trackpy.md  doctor-failure.md  doctor-not-ready.md  install-regression.md  list-missing-introspect-cache.md  manifest-cache-miss-no-update.md  ordinal-mismatch.md  phase-13-introspection-cache.md  phase-15-artifact-info.md  phase-25-gap-3-spc-export.md  phase-25-uat-gap-2-tttrlib.md  phase-25-uat-gap-5.md  phase25-gap4-tttrlib-settings.md  scipy-metadata-loss.md  scipy-ndimage-blacklist.md  scipy-signal-periodogram-typeerror.md  (+6 more)
datasets/: sample_measurements.csv
docs/: index.md  installation.md  usage.md
envs/: bioimage-mcp-base.lock.yml  bioimage-mcp-base.yaml  bioimage-mcp-cellpose.lock.yml  bioimage-mcp-cellpose.yaml  bioimage-mcp-microsam.lock.yml  bioimage-mcp-microsam.yaml  bioimage-mcp-stardist.lock.yml  bioimage-mcp-stardist.yaml  bioimage-mcp-trackpy.lock.yml  bioimage-mcp-trackpy.yaml  bioimage-mcp-tttrlib.lock.yml  bioimage-mcp-tttrlib.yaml  conda-lock.yml
initial_planning/: Bioimage-MCP_ARCHITECTURE.md  Bioimage-MCP_PRD.md  MicroscopyLM_reusability_analysis.md  PRD_REVIEW_001.md
reviews/: scipy_ndimage_migration_review.md
scripts/: benchmark_memory_vs_file.py  benchmark_storage.py  check_base_tiff_fallback.py  check_bioio_tiff_fallback.py  compare_bioio_metadata.py  compare_bioio_metadata_v2.py  confirm_session_replay.py  repro_export.py  test_materialize_real.py  test_materialize_zarr.py  validate_dynamic_registry.py  validate_pipeline.py  validate_quickstart.py  validate_quickstart.sh  verify_bioio_3d.py  verify_bioio_zarr.py
tests/: conftest.py
(+1312 files in other folders)
