[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioimage-mcp"
version = "0.2.0"
description = "Bioimage-MCP: local-first MCP server for bioimage tools"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "OpenAI Codex" }]
dependencies = [
  "mcp",
  "pydantic>=2",
  "PyYAML",
  "bioio",
  "bioio-ome-zarr",
  "bioio-ome-tiff",
  "ngff-zarr",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-timeout>=2.0",
  "scipy",
  "pandas",
  "pillow",
]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-timeout>=2.0",
  "ruff>=0.6",
  "conda-lock>=4.0.0",
  "scipy",
  "pandas",
  "pillow",
]

[project.scripts]
bioimage-mcp = "bioimage_mcp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
