[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioimage-mcp"
version = "0.2.0"
description = "Bioimage-MCP: local-first MCP server for bioimage tools"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "OpenAI Codex" }]
dependencies = [
  "mcp",
  "pydantic>=2",
  "PyYAML",
  "bioio",
  "bioio-ome-zarr",
  "bioio-ome-tiff",
  "ngff-zarr",
  "griffe",
  "docstring-parser",
  "pillow",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-timeout>=2.0",
  "numpydoc",
  "matplotlib",
  "bioio-czi==2.4.2",
  "aicspylibczi==3.3.1",
  "pylibczirw==5.1.1",
  "bioio-imageio==1.3.0",
  "bioio-tifffile==1.3.0",
  "phasorpy",
  "scipy",
  "pandas",
  "pillow",
  "xarray<2026",
]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-timeout>=2.0",
  "ruff>=0.6",
  "conda-lock>=4.0.0",
  "numpydoc",
  "matplotlib",
  "bioio-czi==2.4.2",
  "aicspylibczi==3.3.1",
  "pylibczirw==5.1.1",
  "bioio-imageio==1.3.0",
  "bioio-tifffile==1.3.0",
  "phasorpy",
  "scipy",
  "pandas",
  "pillow",
  "xarray<2026",
]

[project.scripts]
bioimage-mcp = "bioimage_mcp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
